perf: Optimize backend parsing and frontend lazy loading
- Enable Virtual Threads in Spring Boot
- Optimize JacksonEventParser with regex constant and JDBC batch insert
- Implement lazy loading for AppDetail.vue tabs
- Add GEMINI.md for developer context